// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Currency currency format with separators 1`] = `
<div>
  <span
    class="whitespace-nowrap"
  >
    $
    42
  </span>
</div>
`;

exports[`Currency currency format with separators 2`] = `
<div>
  <span
    class="whitespace-nowrap"
  >
    $
    19 000
  </span>
</div>
`;

exports[`Currency currency format with separators 3`] = `
<div>
  <span
    class="whitespace-nowrap"
  >
    $
    19,000
  </span>
</div>
`;

exports[`Currency renders default options 1`] = `
<div>
  <span
    class="whitespace-nowrap"
  >
    $42
  </span>
</div>
`;

exports[`Currency renders default options 2`] = `
<div>
  <span
    class="whitespace-nowrap"
  >
    19 000 $
  </span>
</div>
`;
